Added telegram username to patch request for Swagger doc. (#1055)
